# mlc

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md
doc/: sem_ast.md
project/include/: ast_def.h  placeholder.h
project/include/mlc/: config.h
project/include/mlc/mlir/: operation.h
project/include/mlc/parser/: sem_ast.h
project/include/parser/: sem_ast.h
project/src/: main.cpp
project/src/mlir/: operation.cpp
project/src/parser/: ast_def.h  lexer.cpp  lexer.h  lexer.l  parser.cpp  parser.h  parser.y  sem_ast_gen.cpp  sem_block.cpp  sem_constant.cpp  sem_expression.cpp  sem_identifier.cpp  sem_operations.cpp  sem_region.cpp
project/src/parser/pass/: const_calculation.h  constexpr_calculation.cpp  constexpr_calculation.h  pass.cpp  pass.h  sem_context.cpp  simple_expression.cpp  symtbl.cpp  tagging.cpp  tagging.h  visitor.h
project/src/parser/sem/: ast_enums.h  ast_node_types.h
script/: ast.gdb
src/: SysY2022.pest  main.rs  mlc.rs
src/mlc/: ast.rs  compiler.rs  parser.rs
test/: fb.cpp  fb.mlir  fb.sy  lextest.txt  main.sy
test/lib/: sylib.c  sylib.h
