[package]
name = "mlc"
version = "0.1.0"
authors = ["bLueriVerLHR <blueriverlhr@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
pest = { version = "2" }
pest_derive = { version = "2" }
